--- a/src/style/article.module.css
+++ b/src/style/article.module.css
@@ -4,7 +4,7 @@
 }
 
 .article-title {
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   margin: 0;
 }
 
@@ -15,8 +15,8 @@
 
 .article {
   color: #3f3f46;
-  font-size: 1rem;
-  line-height: 1.5;
+  font-size: 1.1rem;
+  line-height: 1.5rem;
   width: 100%;
   margin-bottom: 4rem;
 
