--- a/src/style/root.css
+++ b/src/style/root.css
@@ -1,7 +1,7 @@
 html,
 body,
 #root {
-  font-family: Inter, -apple-system, BlinkMacSystemFont, Roboto, Segoe UI, Helvetica, Arial, sans-serif;
+  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
   height: 100%;
   margin: 0;
   -webkit-font-smoothing: antialiased;
